new image update changes

--- a/package.json
+++ b/package.json
@@ -6,13 +6,15 @@
     "@bytescale/upload-widget-react": "^4.17.0",
     "@chakra-ui/icons": "^2.1.1",
     "@chakra-ui/react": "^2.8.2",
+    "@cloudinary/react": "^1.13.0",
+    "@cloudinary/url-gen": "^1.19.0",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.3",
-    "cloudinary": "^2.0.0",
+    "cloudinary": "^2.2.0",
     "dotenv": "^16.4.1",
     "framer-motion": "^10.16.16",
     "multer": "^1.4.5-lts.1",
